# invoices

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Jenkinsfile  README.md  build.rs
.circleci/: config.yml  container_resource_usage.sh  usage-plot.gp
.semaphore/: semaphore.yml
analysis_server/: Cargo.toml
analysis_server/src/: db.rs  main.rs  service.rs
examples/: invoice.toml
grpc_protocol/: Cargo.toml
grpc_protocol/src/: invoice.rs  invoice_grpc.rs  lib.rs
invoice_cli/: Cargo.toml
invoice_cli/src/: cli.yml  main.rs
invoice_server/: Cargo.toml
invoice_server/src/: main.rs  service.rs
invoice_web/: Cargo.toml
invoice_web/src/: main.rs
invoice_web/static/: index.html  style.css
rating_server/: Cargo.toml
rating_server/src/: main.rs
src/analysis_server/: db.rs  main.rs  service.rs
src/invoice_app/: cli.yml  main.rs
src/invoice_server/: db.rs  main.rs  service.rs
src/protos/: invoice.proto  invoice.rs  invoice_grpc.rs
src/rating_server/: main.rs  service.rs
