[package]
name = "grpc_protocol"
version = "0.1.0"
authors = ["externalreality <ecjones@protonmail.com>"]
edition = "2018"

[dependencies]
uuid = {version = "0.7.4", features = ["v4"]} 
grpcio = "0.4.4"
protobuf = "2.6.1"
futures = "0.1.27"
gotham = "0.3.0"
hyper = "0.12"
mime = "0.3"
clap = {version = "2.33", features = ["yaml"]}
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
protoc-grpcio = "1.0.2"
protobuf-codegen = "2.6.1"

[features]
default = ["with-serde"]
with-serde = ["protobuf/with-serde"]