[package]
name = "grpc_protocol"
version = "0.1.0"
authors = ["externalreality <ecjones@protonmail.com>"]
edition = "2018"

[dependencies]
grpcio = "0.4.4"
protobuf = "2.6.2"
futures = "0.1.27"

serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
protoc-grpcio = "1.0.2"
protobuf-codegen = "2.6.2"

[features]
default = ["with-serde"]
with-serde = ["protobuf/with-serde"]