[package]
name = "invoice"
version = "0.1.0"
authors = ["externalreality <ecjones@protonmail.com>"]
edition = "2018"

[dependencies]
uuid = {version = "0.7.4", features = ["v4"]} 
grpcio = "0.4.4"
protobuf = "2.6.1"
futures = "0.1.27"
gotham = "0.3.0"
hyper = "0.12"
mime = "0.3"
clap = {version = "2.33", features = ["yaml"]}
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
grpc_protocol = { path = "../grpc_protocol" }
